src/objects/AcctSeed__Accounting_Settings__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Payee_Left_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the payee field relative to the current location on the print check pdf. A positive value will move the field right and a negative value will move the field left the number of millimeters specified.</inlineHelpText>
        <label>Payee  Left Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Top_Offset__c</fullName>
        <inlineHelpText>Specifying a value will offset the payee field relative to the current location on the print check pdf. A positive value will move the field down and a negative value will move the field up the number of millimeters specified.</inlineHelpText>
        <label>Payee Top Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Discount_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This account is credited when your organization takes advantage of early vendor payment discounts.</inlineHelpText>
        <label>Vendor Payment Discount GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Payment Discount GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Link_Username__c</fullName>
        <label>Payment Link Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Post_Settings__c</fullName>
        <label>Post Settings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header-Level Post</fullName>
                    <default>true</default>
                    <label>Header-Level Post</label>
                </value>
                <value>
                    <fullName>Line-Level Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Postal_Code__c</fullName>
        <description>Zip or Postal Code</description>
        <inlineHelpText>Zip or Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Pre_Populate_Account_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this pre-populates Account Name, GL Account and any GL Variables in the drawer or directly on the source document (if Automated Add is also enabled) with values from the Account name/File Import Match Name that matches the Description.</inlineHelpText>
        <label>Pre-Populate Account Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Prepaid_Expense_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Populates the Debit GL Account field on a Cash Disbursement when applied to a Payable</inlineHelpText>
        <label>Prepaid Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Settings (Default Prepaid Expense GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settingsauaf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Region__c</fullName>
        <description>2 character abbreviation for State or Province</description>
        <inlineHelpText>2 character abbreviation for State or Province</inlineHelpText>
        <label>State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Retained_Earnings_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Gl Account used when creating retained earnings financial cube records</inlineHelpText>
        <label>Retained Earnings GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Retained Earnings GL Account)</relationshipLabel>
        <relationshipName>Accounting_SettingsuZ2N</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Set this to the main revenue account associated with your billings.</inlineHelpText>
        <label>Default Revenue GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Revenue</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Revenue GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings4</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Stripe_Connected_Account_Id__c</fullName>
        <label>Stripe Connected Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Calculation_Mode__c</fullName>
        <description>Point of Sale considers taxability for Origin Address. Point of Destination considers taxability for Shipping Address. Shipment considers taxability for both addresses.</description>
        <inlineHelpText>Point of Sale considers taxability for Origin Address. Point of Destination considers taxability for Shipping Address. Shipment considers taxability for both addresses.</inlineHelpText>
        <label>Sales Tax Calculation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POS</fullName>
                    <default>true</default>
                    <label>Point of Sale</label>
                </value>
                <value>
                    <fullName>POD</fullName>
                    <label>Point of Destination</label>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Unapplied_Cash_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This GL Account is credited upon entering a cash receipt.   After applying the cash receipt to a bill, the amount is removed (debits) from this account and a reduces (credits) Accounts Receivable.   Typical placement of this account is next to AR.</inlineHelpText>
        <label>Unapplied A/R GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Unapplied Cash GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings7</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Vouchers_Payable_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This GL Account is credited when a Purchase Order product has been received.  Then match a Vendor Invoice by creating a Payable from the Purchase Order page.  This action will then debit Vouchers Payable and credit Accounts Payable.</inlineHelpText>
        <label>Vouchers Payable GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Balance Sheet</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Vouchers Payable)</relationshipLabel>
        <relationshipName>Accounting_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Work_in_Process_GL_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This account is increased when a Manufacturing Order allocates raw materials.  It is reduced upon completion of the manufactured product and transferred to finished goods inventory.</inlineHelpText>
        <label>Work in Process GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounting_Settings (Work in Process GL Account)</relationshipLabel>
        <relationshipName>Accounting_Settings6</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accounting Settings</label>
    <nameField>
        <label>Account Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>